# scheduler

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  agents.md  e2b.Dockerfile  e2b.pyproject.toml  pyproject.toml  setup-prompt.md
.github/workflows/: build-and-push.yml
docs/: matrix-bridges-setup.md  self-hosting.md  testing-guide.md  third-party-bot-plan.md
evals/: backend.py  viewer.html
scripts/: fix_sent_body_html.py
sql/: 001_create_guides.sql  002_add_gmail_history_id.sql  003_add_stash_branding.sql  005_add_google_meet.sql  006_add_system_enabled.sql  007_nullable_refresh_token.sql  008_add_sales_email_toggle.sql  010_add_auth0_sub.sql  012_add_calendar_ids.sql  013_pending_invites_multi_attendee_location.sql  015_add_matrix_credentials.sql  016_create_page_events.sql  016_create_pending_replies.sql  021_add_draft_refresh.sql  023_create_self_hosted_registrations.sql  024_add_google_email.sql  024_add_guide_versions.sql  025_backfill_google_email.sql  025_create_guide_update_runs.sql  026_guide_update_runs_status.sql  027_bot_mode.sql  028_user_profile.sql  029_stripe_subscription.sql
src/scheduler/: analytics.py  billing.py  claude_runtime.py  config.py  db.py  db_postgres.py  db_sqlite.py  hook.py  onboarding.py  run_e2b.py  watcher.py
src/scheduler/auth/: google_auth.py
src/scheduler/availability/: checker.py
src/scheduler/booking/: __init__.py  __main__.py  fallback.py  models.py  playwright_flow.py
src/scheduler/bot/: __init__.py  agent.py  conversation.py  gmail.py  (+1 more)
tests/: test_availability.py  test_classifier.py  test_invite_verification.py
web/: next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/lib/: analytics.ts  api.ts  blog-posts.ts  markdown-reader.ts
(+112 files in other folders)
