[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scheduler"
version = "0.1.0"
description = "Inbound scheduling agent — drafts email responses with proposed meeting times"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "claude-agent-sdk>=0.1.0",
    "e2b-code-interpreter>=1.0.0",
    "fastapi>=0.110.0",
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "PyJWT[crypto]>=2.8.0",
    "playwright>=1.40.0",
    "browser-use>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "stripe>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
]

[tool.setuptools.package-data]
scheduler = ["controlplane/static/**"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
